minor fixes and tested encoder reading

--- a/SteerByWire/SteerByWireC6.ioc
+++ b/SteerByWire/SteerByWireC6.ioc
@@ -179,7 +179,8 @@ TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.IPParameters=Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation1 CH1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM2.IPParameters=Channel-PWM Generation3 CH3,AutoReloadPreload,Period
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=Channel-PWM Generation3 CH3,AutoReloadPreload,Period,EncoderMode
 TIM2.Period=6553
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
