--- a/SteerByWire/SteerByWireC6.ioc
+++ b/SteerByWire/SteerByWireC6.ioc
@@ -29,26 +29,27 @@ Mcu.IP7=TIM3
 Mcu.IPNb=8
 Mcu.Name=STM32F103C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA8
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB8
-Mcu.Pin17=PB9
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB15
-Mcu.PinsNb=19
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PB15
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB8
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Tx
@@ -95,6 +96,10 @@ PB8.Signal=CAN_RX
 PB9.Locked=true
 PB9.Mode=CAN_Activate
 PB9.Signal=CAN_TX
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
