--- a/SteerByWireV2/SteerByWireV2.ioc
+++ b/SteerByWireV2/SteerByWireV2.ioc
@@ -19,18 +19,23 @@ Mcu.IP0=CAN
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP4=TIM2
+Mcu.IPNb=5
 Mcu.Name=STM32F103C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PB9
+Mcu.Pin11=VP_SYS_VS_Systick
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PB8
-Mcu.Pin6=PB9
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PB13
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB8
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Tx
@@ -49,10 +54,15 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.Signal=S_TIM2_CH2
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Signal=S_TIM2_CH3
+PB13.Locked=true
+PB13.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_PuPd
 PB8.GPIO_PuPd=GPIO_NOPULL
 PB8.Locked=true
@@ -126,6 +136,15 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=Channel-PWM Generation3 CH3,EncoderMode
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
